# calc

./: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp
app/: CMakeLists.txt  mainwindow.cpp
lib/: CMakeLists.txt
lib/include/: calculator.h
